--- a/exercises/Vagrantfile
+++ b/exercises/Vagrantfile
@@ -8,10 +8,10 @@ Vagrant.configure("2") do |config|
   ## Set the image version
   # config.vm.box_version = "15.2.31.212"
 
-  # st the static IP for the vagrant box
+  # set the static IP for the vagrant box
   config.vm.network "private_network", ip: "192.168.50.4"
   
-  # consifure the parameters for VirtualBox provider
+  # configure the parameters for VirtualBox provider
   config.vm.provider "virtualbox" do |vb|
     vb.memory = "4096"
     vb.cpus = 4
